# subxt-dilithium

./: Cargo.toml  LICENSE  README.md  graphs.py  solochain_metadata.scale
csv-files/: ecdsa_verify_time.csv  ml_dsa_44_verify_time.csv  ml_dsa_65_verify_time.csv  ml_dsa_87_verify_time.csv  sr25519_verify_time.csv
src/: chain.rs  chain_readable.rs  client.rs  experiments.rs  helpers.rs  lib.rs  main.rs  measuring_functions.rs
