[package]
name = "subxt-baseline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
hex = "0.4"
sp-keyring = { version = "32.0.0" }
frame-metadata = "16"
parity-scale-codec = "3"
blake2 = "0.10"
sp-runtime = { git = "https://github.com/bsaviozz/polkadot-sdk.git", branch = "dilithium", features = ["std"] }
sp-core = { git = "https://github.com/bsaviozz/polkadot-sdk.git", branch = "dilithium", features = ["std"] }
sp-externalities = { git = "https://github.com/bsaviozz/polkadot-sdk.git", branch = "dilithium", features = ["std"] }
futures = "0.3"

subxt        = { git = "https://github.com/bsaviozz/subxt", branch = "master" }
subxt-core   = { git = "https://github.com/bsaviozz/subxt", branch = "master" }
subxt-signer = { git = "https://github.com/bsaviozz/subxt", branch = "master" }